--- a/src/app/components/containers-total/containers-total.component.html
+++ b/src/app/components/containers-total/containers-total.component.html
@@ -1,9 +1,17 @@
 <section class="card">
-  <div class="card-texto">
+  <div
+    class="card-texto box1"
+    data-aos="zoom-in-right"
+    data-aos-duration="2000"
+  >
     <h1>Nos amamos y nos elegimos todos los días</h1>
   </div>
-  <div class="card-texto">
-    <img src="#" alt="anillos" />
+  <div
+    class="card-texto box2"
+    data-aos="zoom-out-right"
+    data-aos-duration="2000"
+  >
+    <img src="../../../assets/images/images-icons/anillos.png" alt="anillos" />
     <h3>Ceremonia</h3>
     <p>Hotel catalonia conde de florida blanca</p>
     <p>calle princesa No. 18 300002 mucia</p>
@@ -11,31 +19,51 @@
     <p>A continuación de la ceremonia damos inicio a nuestra fiesta</p>
     <button class="card-link"><a href="#">Cómo llegar?</a></button>
   </div>
-  <div class="card-img">
+  <div class="card-img box3" data-aos="zoom-in-left" data-aos-duration="2000">
     <img src="../../../assets/images/images-conten/89129.jpeg" alt="novios" />
   </div>
-  <div class="card-texto">
-    <img src="#" alt="instagram" />
+  <div
+    class="card-texto box4"
+    data-aos="zoom-in-right"
+    data-aos-duration="2000"
+  >
+    <img
+      src="../../../assets/images/images-icons/instagram.png"
+      alt="instagram"
+    />
     <p>
       Ahora puedes entrar a instagram con nuestro hashtag y dejarnos una foto
-      que recuerde momentos que hemos pasado junto a ti. ¡Comparte tus fotos con
-      nosotros usando #CARLOSYANDREA2024! También tenemos nuestra cuenta de
-      Instagram para que puedas ver todos los detalles de la boda
+      que recuerde momentos que hemos pasado junto a ti.
+    </p>
+    <br />
+    <p>¡Comparte tus fotos con nosotros usando #CARLOSYANDREA2024!</p>
+    <br />
+    <p>
+      También tenemos nuestra cuenta de Instagram para que puedas ver todos los
+      detalles de la boda.
     </p>
   </div>
-  <div class="card-img">
+  <div class="card-img box5" data-aos="zoom-out-right" data-aos-duration="2000">
     <img
       src="../../../assets/images/images-conten/7DYWO4V6FNC3RD7ELVQKU2J5CE.avif"
       alt="novios2"
     />
   </div>
-  <div class="card-texto">
-    <img src="#" alt="zapatos" />
+  <div
+    class="card-texto box6"
+    data-aos="zoom-out-right"
+    data-aos-duration="2000"
+  >
+    <img src="../../../assets/images/images-icons/zapatos.png" alt="zapatos" />
     <h3>dress code</h3>
     <p>elegante</p>
   </div>
-  <div class="card-texto">
-    <img src="#" alt="platos" />
+  <div
+    class="card-texto box7"
+    data-aos="zoom-out-left"
+    data-aos-duration="2000"
+  >
+    <img src="../../../assets/images/images-icons/plato.png" alt="plato" />
     <h3>Valor de la tarjeta</h3>
     <p>$00 por persona</p>
     <p>puedes realizar el pago a la siguiente cuenta:</p>
@@ -43,26 +71,32 @@
     <p>Cuenta de Banco Santander</p>
     <p>xxxx xxxx xxxx xxxx</p>
   </div>
-  <div class="card-img">
+  <div class="card-img box8" data-aos="zoom-in-left" data-aos-duration="2000">
     <img
       src="../../../assets/images/images-conten/f.elconfidencial.com_original_e52_d19_cfe_e52d19cfe44da0f12a62bc916ac069b1.jpg"
       alt="novios3"
     />
   </div>
-  <div class="card-img">
+  <div class="card-img box9" data-aos="zoom-in-right" data-aos-duration="2000">
     <img src="../../../assets/images/images-conten/137729.jpeg" alt="mesa" />
   </div>
-  <div class="card-texto">
-    <img src="#" alt="regalo" />
+  <div
+    class="card-texto box10"
+    data-aos="zoom-in-down"
+    data-aos-duration="2000"
+  >
+    <img src="../../../assets/images/images-icons/regalo.png" alt="regalo" />
     <h3>confirmación de asistencia</h3>
     <p>
       Para nosotros es muy importante que confirmes esta invitación, o que nos
-      cuentes si no nos puedes acompañar. No te olvides de contarnos si tienes
-      alguna restricción alimentaria (vegano, celiaco, diabético, etc.)
+      cuentes si no nos puedes acompañar.
+      <br />
+      No te olvides de contarnos si tienes alguna restricción alimentaria
+      (vegano, celiaco, diabético, etc.)
     </p>
     <button class="card-link"><a href="#">Ir a Whatsapp</a></button>
   </div>
-  <div class="card-img">
+  <div class="card-img box11" data-aos="zoom-in-up" data-aos-duration="2000">
     <img
       src="../../../assets/images/images-conten/nathan-dumlao-duNBz_LBaEc-unsplash-scaled.jpg"
       alt="novios4"
