--- a/src/app/components/containers-total/containers-total.component.html
+++ b/src/app/components/containers-total/containers-total.component.html
@@ -4,7 +4,7 @@
     data-aos="zoom-in-right"
     data-aos-duration="2000"
   >
-    <h1>Nos amamos y nos elegimos todos los días</h1>
+    <h1>“La medida del amor es amar sin medida” - San Agustín</h1>
   </div>
   <div
     class="card-texto box2"
@@ -13,13 +13,19 @@
   >
     <img src="../../../assets/images/images-icons/anillos.png" alt="anillos" />
     <h3>Ceremonia</h3>
-    <p>Hotel catalonia conde de florida blanca</p>
-    <p>calle princesa No. 18 300002 mucia</p>
+    <p>Club de Golf Los Lirios</p>
+    <p>Campo Rancagua</p>
+    <p>Requinoa, Requínoa, O'Higgins, Chile</p>
+    <p>56 72 239 1105</p>
     <p>12 hrs</p>
     <p>A continuación de la ceremonia damos inicio a nuestra fiesta</p>
-    <button class="card-link"><a href="#">Cómo llegar?</a></button>
+    <button class="card-link">
+      <a href="https://maps.app.goo.gl/YA4fgKidpHGWbt4H9" target="_blank"
+        >Cómo llegar?</a
+      >
+    </button>
   </div>
-  <div class="card-img box3" data-aos="zoom-in-left" data-aos-duration="2000">
+  <div class="card-img box3" data-aos="zoom-in-right" data-aos-duration="2000">
     <img src="../../../assets/images/images-conten/89129.jpeg" alt="novios" />
   </div>
   <div
@@ -36,12 +42,15 @@
       que recuerde momentos que hemos pasado junto a ti.
     </p>
     <br />
-    <p>¡Comparte tus fotos con nosotros usando #CARLOSYANDREA2024!</p>
+    <p>¡Comparte tus fotos con nosotros usando #ANNAYAARON2024!</p>
     <br />
     <p>
       También tenemos nuestra cuenta de Instagram para que puedas ver todos los
       detalles de la boda.
     </p>
+    <button class="card-link">
+      <a href="#" target="_blank">Instagram</a>
+    </button>
   </div>
   <div class="card-img box5" data-aos="zoom-out-right" data-aos-duration="2000">
     <img
@@ -55,23 +64,24 @@
     data-aos-duration="2000"
   >
     <img src="../../../assets/images/images-icons/zapatos.png" alt="zapatos" />
-    <h3>dress code</h3>
-    <p>elegante</p>
+    <h3>Codigo Vestimenta</h3>
+    <p>Elegante, casual</p>
   </div>
   <div
     class="card-texto box7"
-    data-aos="zoom-out-left"
+    data-aos="zoom-out-right"
     data-aos-duration="2000"
   >
     <img src="../../../assets/images/images-icons/plato.png" alt="plato" />
     <h3>Valor de la tarjeta</h3>
-    <p>$00 por persona</p>
+    <p>$100 por persona</p>
     <p>puedes realizar el pago a la siguiente cuenta:</p>
     <p>Alxxx Axxxs xxxxxxx</p>
-    <p>Cuenta de Banco Santander</p>
+    <p>Alxxx Axxxs xxxxxxx</p>
+    <p>Cuenta de Banco</p>
     <p>xxxx xxxx xxxx xxxx</p>
   </div>
-  <div class="card-img box8" data-aos="zoom-in-left" data-aos-duration="2000">
+  <div class="card-img box8" data-aos="zoom-in-right" data-aos-duration="2000">
     <img
       src="../../../assets/images/images-conten/f.elconfidencial.com_original_e52_d19_cfe_e52d19cfe44da0f12a62bc916ac069b1.jpg"
       alt="novios3"
