--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,10 +1,17 @@
 <section class="footer">
   <div>
-    <p class="footer-visita" data-aos="fade-up-right" data-aos-duration="2000">
+    <p class="footer-visita" data-aos="zoom-out-right" data-aos-duration="2000">
       ¡TE ESPERAMOS!
     </p>
-    <p class="footer-nombre" data-aos="fade-up-left" data-aos-duration="2000">
+    <p class="footer-nombre" data-aos="fade-up-right" data-aos-duration="2000">
       Aaron Loeb & Anna Katrina
+    </p>
+    <p class="footer-autor">
+      Copyright &#169; 2024 Paulina Ávila.
+      <a href="https://www.linkedin.com/in/paulina-avila-l93/" target="_blank"
+        >💜</a
+      >
+      All Rights Reserved.
     </p>
   </div>
 </section>
