--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -4,22 +4,22 @@
       <img
         src="../../../assets/images/rose-flower-bouquet-watercolor-for-valentine-free-png.webp"
         alt="flor"
-        data-aos="flip-left"
-        data-aos-duration="1700"
+        data-aos="zoom-in-right"
+        data-aos-duration="2000"
       />
-      <p data-aos="fade-right" data-aos-duration="1700">
-        We are very pleased to invite you to our wedding
-      </p>
-      <p class="nombre" data-aos="fade-left" data-aos-duration="1700">
+      <p data-aos="zoom-out-right" data-aos-duration="2000">¡Nos casamos!</p>
+      <p class="nombre" data-aos="zoom-out-right" data-aos-duration="2000">
         Aaron Loeb <br />
         & <br />Anna Katrina
       </p>
-      <p data-aos="fade-right" data-aos-duration="1700">Save the date</p>
-      <p data-aos="fade-left" data-aos-duration="1700">
+      <p data-aos="zoom-in-right" data-aos-duration="2000">
+        Y tenemos el honor de invitarles a celebrar nuestra boda
+      </p>
+      <p data-aos="zoom-out-right" data-aos-duration="2000">
         Monday, june 10 th 2022 | 09.00 AM
       </p>
-      <p data-aos="fade-right" data-aos-duration="1700">
-        123 Anywhere St., Any City, ST 12345
+      <p data-aos="zoom-in-right" data-aos-duration="2000">
+        Club de Golf Los Lirios
       </p>
     </div>
   </div>
