--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -4,9 +4,9 @@
   display: flex;
   justify-content: center;
   text-align: center;
-  margin: 30px 0 40px 0;
+  margin: 30px 0 50px 0;
   @include m.tablet {
-    margin: 30px 0 70px 0;
+    margin: 30px 0 50px 0;
   }
   &-visita {
     font-size: 3em;
@@ -23,6 +23,16 @@
     font-weight: bold;
     @include m.tablet {
       font-size: 8em;
+    }
+  }
+  &-autor {
+    font-size: 0.8em;
+    margin-bottom: 10px;
+    font-weight: bold;
+    margin-top: 30px;
+    @include m.tablet {
+      font-size: 1.5em;
+      margin-top: 80px;
     }
   }
 }
