--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,15 +16,16 @@
 html {
   font-size: 62.5%;
   // background-image: url("./assets/images/background.a27858fd.webp");
-  background-image: url("./assets/images/fondo.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
+  // width: 100vw;
   letter-spacing: 2px;
 }
 body {
   font-size: 1.6rem;
   font-size: 100%;
+  background-image: url("./assets/images/fondo.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
 }
 ol,
 ul {
