--- a/src/app/components/containers-total/containers-total.component.scss
+++ b/src/app/components/containers-total/containers-total.component.scss
@@ -43,6 +43,7 @@
       grid-row-start: 15;
       grid-row-end: 18;
       height: 100%;
+      width: 100%;
     }
     .box5 {
       // novios solos
@@ -74,7 +75,7 @@
       grid-column-end: 11;
       grid-row-start: 7;
       grid-row-end: 11;
-      height: 100%;
+      height: 105%;
     }
     .box8 {
       // manos
@@ -101,7 +102,6 @@
       grid-column-end: 11;
       grid-row-start: 23;
       grid-row-end: 27;
-      height: 100%;
     }
     .box11 {
       grid-column-start: 3;
@@ -150,6 +150,9 @@
     background-color: #fcfaf9;
     margin-bottom: 45px;
     text-align: center;
+    @include m.tablet {
+      padding: min(2rem, 90%);
+    }
     p {
       margin-bottom: 10px;
     }
