--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -13,7 +13,7 @@
       width: 300px;
       margin: 20px 0 20px 0;
       @include m.tablet {
-        max-width: 580px;
+        width: 680px;
         font-size: 3.5em;
         margin: 40px 0 20px 0;
       }
